<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#fff">
  		
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@layout/header_gradient"
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip">
  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/logo2"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"
  							android:layout_marginLeft="10dip"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends --> 
  		<!-- Footer Start -->
  		<!--<LinearLayout android:id="@+id/footer"-->
  				<!--android:layout_width="fill_parent"-->
  				<!--android:layout_height="90dip"-->
  				<!--android:background="@layout/footer_repeat"-->
  				<!--android:layout_alignParentBottom="true">-->
  		<!--</LinearLayout>-->
  		<!-- Footer Ends --> 
  		
  		<!-- Registration Form -->
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:layout_below="@id/header">
		  <!-- Full Name Label -->

            <EditText
                android:id="@+id/reg_fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/str_name"
                android:singleLine="true" />
		  <!--  Email Label -->

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/str_cap_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
		  <!-- Password Label -->

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/str_cap_password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnImage"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_cap_imagen" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>


		  <!-- Register Button -->		
		  <Button android:id="@+id/btnRegister" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:text="@string/str_newRegister"/>
		  <!-- Link to Login Screen -->
		  <TextView android:id="@+id/link_to_login" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="40dip"
		  		android:layout_marginBottom="40dip"
		  		android:text="@string/str_alredy_account"
		  		android:gravity="center"
		  		android:textSize="20dip"
		  		android:textColor="#025f7c"/>

        </LinearLayout>
  		<!-- Registration Form Ends -->
  		
  		
  </RelativeLayout>
</ScrollView>
