<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#ffffff">
  		
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@layout/header_gradient" 
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip"
				android:orientation="horizontal">
  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/logo2"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"
  							android:layout_marginLeft="10dip"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends -->
  		<!-- Footer Start -->
  		<!--<LinearLayout android:id="@+id/footer"-->
  				<!--android:layout_width="fill_parent"-->
  				<!--android:layout_height="90dip"-->
  				<!--android:background="@layout/footer_repeat"-->
  				<!--android:layout_alignParentBottom="true"-->
				<!--android:orientation="vertical">-->
  		<!--</LinearLayout>-->
  		<!-- Footer Ends -->

  		<!-- Login Form -->
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:layout_below="@id/header">
		  <!--  Email Label -->

			<EditText
				android:id="@+id/email"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dip"
				android:layout_marginTop="5dip"
				android:hint="@string/str_correo"
				android:singleLine="true" />
		  <!--  Password Label -->

			<EditText
				android:id="@+id/password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:hint="@string/str_password"
				android:inputType="textPassword"
				android:singleLine="true" />
		  <!-- Login button -->	
		  <Button android:id="@+id/btnLogin" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="@string/str_login"/>
		  <!-- Link to Registration Screen -->
			<TextView
				android:id="@+id/link_to_register"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="40dip"
				android:layout_marginTop="40dip"
				android:gravity="center"
				android:text="@string/str_registro"
				android:textColor="#0b84aa"
				android:textSize="20dip" />
		</LinearLayout>
  		<!-- Login Form Ends -->
  </RelativeLayout>
</ScrollView>
